<resources>
    <string name="app_name">Life Hub</string>
    <string name="username">User name</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_title">Login here</string>
    <string name="username_new">Enter a new user name</string>
    <string name="password_new">Enter a new password</string>
    <string name="password_confirm">Confirm your new password</string>
    <string name="register">Register</string>
    <string name="net_unavailable">Network Unavailable</string>
    <string name="password_not_match">Password does not match</string>
    <string name="welcome_main">Welcome!</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="travel">Travel</string>
    <string name="housing">Housing</string>
    <string name="help_menu">Help</string>
    <string name="about_page">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_home">NewsHomeActivity</string>
    <string name="title_activity_housing_list">HousingListActivity</string>
    <string name="title_activity_housing_detail">HousingDetailActivity</string>
</resources>

