<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/username_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_new"/>
    <EditText
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_new"
        android:hint="@string/password_new"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_new"
        android:hint="@string/password_confirm"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_confirm"
        android:text="@string/register"/>
</RelativeLayout>
